complete memory game

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,54 @@
     <title>Memory</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <h1 id="card1" class="first-click" name="cat">Card 1</h1>
+          <img class="hidden" src="../img/cat.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card2" class="first-click" name="dog">Card 2</h1>
+          <img class="hidden" src="../img/dog.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card3" class="first-click" name="bird">Card 3</h1>
+          <img class="hidden" src="../img/bird.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card4" class="first-click" name="lizard">Card 4</h1>
+          <img class="hidden" src="../img/lizard.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card5" class="first-click" name="pig">Card 5</h1>
+          <img class="hidden" src="../img/pig.jpg">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <h1 id="card6" class="first-click" name="cat">Card 6</h1>
+          <img class="hidden" src="../img/cat.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card7" class="first-click" name="dog">Card 7</h1>
+          <img class="hidden" src="../img/dog.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card8" class="first-click" name="bird">Card 8</h1>
+          <img class="hidden" src="../img/bird.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card9" class="first-click" name="lizard">Card 9</h1>
+          <img class="hidden" src="../img/lizard.jpg">
+        </div>
+        <div class="col-md-2">
+          <h1 id="card10" class="first-click" name="pig">Card 10</h1>
+          <img class="hidden" src="../img/pig.jpg">
+        </div>
+      </div>
+      <div class="output">
+        <h1>You win!</h1>
+      </div>
+    </div>
   </body>
 </html>
